testsuite/poke.pkl/recursion-bad-1.pk
/* { dg-do compile } */
/* https://sourceware.org/bugzilla/show_bug.cgi?id=25379 */
{ fun foo = void: { foo (); } /* { dg-error "syntax error" } */
